Implemented qna apis & to do test
